--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,16 +1,17 @@
 <%- include('../partials/head') %>
-
     <div class="container">
-        <h1>Here's all the listings</h1>
-        <ul>
-
+        <!-- <h1>Here's all the listings</h1> -->
             <% listings.forEach((listing) => { %>
-                <li>
-                    A listing in <%= listing.city %> owned by <%= listing.owner.username %>
-                </li>
-            <% }) %>
-                
-        </ul>
-    </div>
 
+                <div class="card mt-2" style="width: 18rem;">
+                    <img src="https://images.pexels.com/photos/106399/pexels-photo-106399.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="card-img-top" alt="listing for <%= listing.streetAddress %>">
+                    <div class="card-body">
+                      <h5 class="card-title">$<%= listing.price %></h5>
+                      <p class="card-text"><%= listing.streetAddress %></p>
+                      <a href="/listings/<%= listing._id %>" class="btn btn-primary">View Details</a>
+                    </div>
+                  </div>
+
+            <% }) %>  
+    </div>
 <%- include('../partials/footer') %>
