Add update functionality

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -8,9 +8,11 @@
             <label for="">City: </label>
             <input type="text" name="city">
             <label for="">Price: </label>
-            <input type="text" name="price">
+            <input type="number" name="price">
             <label for="">Size: </label>
             <input type="text" name="size">
+            <label for="">Image: </label>
+            <input type="text" name="imgUrl">
             <button type="submit" class="btn btn-primary">Add Listing</button>
         </form>
     </div>
