Finish favorite/unfavorite function

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -17,7 +17,20 @@
                     <a href="/listings/<%= user._id %>/<%= listing._id %>/edit">Edit this Listing</a>
                  <% } %>
                 </div>
+                <h5>Favorites</h5>
+                <p class="card-text">Favorited by <%= listing.favoritedByUsers.length %></p>
+                <% if (userHasFavorited) { %>
+                    <p class="text-muted">You've favorited this listing!</p>
+                    <form action="/listings/<%= listing._id %>/favorited-by/<%= user._id %>?_method=DELETE" method="POST">
+                        <button type="submit" class="btn btn-info">Unfavorite it!</button>
+                    </form>
+                <% } else { %>
+                    <form action="/listings/<%= listing._id %>/favorited-by/<%= user._id %>" method="POST">
+                        <button type="submit" class="btn btn-info">Favorite it!</button>
+                    </form>
+                <% } %>
             </div>
         </div>
     </div>
 <%- include('../partials/footer') %>
+
