--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -2,7 +2,7 @@
 
     <div class="container">
         <h1>Add a new Listing</h1>
-        <form action="/listings/<%= user._id %>" method="POST">
+        <form action="/listings/<%= user._id %>" method="POST" enctype="multipart/form-data">
             <label for="">Street Address: </label>
             <input type="text" name="streetAddress">
             <label for="">City: </label>
@@ -12,7 +12,8 @@
             <label for="">Size: </label>
             <input type="text" name="size">
             <label for="">Image: </label>
-            <input type="text" name="imgUrl">
+            <!-- <input type="text" name="imgUrl"> -->
+            <input type="file" name="imgUrl" accept="image/*" required />
             <button type="submit" class="btn btn-primary">Add Listing</button>
         </form>
     </div>
